# integrations

./: .gitignore  README.md  akamai.md  apache.md  aspnet.md  bubble.md  cloudflare.md  cloudfront.md  django.md  docker.md  express.md  fastly.md  firebase.md  hapi.md  haproxy.md  iis.md  koa.md  laravel.md  netlify.md  nextjs.md  nginx.md  nuxt.md  rails.md  spring.md  symfony.md  vercel.md
.github/workflows/: publish-npm.yml  publish-nuget.yml  publish-packagist.yml  publish-pypi.yml  publish-rubygems.yml
akamai/: README.md  bundle.json
akamai/src/: main.js
apache/: .htaccess  httpd-vhost.conf
aspnet/: IndexBoost.AspNetCore.csproj  IndexBoostExtensions.cs  IndexBoostMiddleware.cs  IndexBoostOptions.cs  README.md
bubble/: plugin-guide.md
cloudflare/: worker.js  wrangler.toml
cloudfront/: README.md
cloudfront/lambda/: index.js
django/: README.md  pyproject.toml
django/indexboost_django/: __init__.py  middleware.py
docker/: docker-compose.yml  nginx-docker.conf
express/: README.md  package-lock.json  package.json  tsconfig.json
fastly/: README.md  fastly.vcl
firebase/: README.md  firebase.json
haproxy/: haproxy.cfg
iis/: IndexBoostModule.cs  README.md  web.config
laravel/: README.md  composer.json  phpunit.xml
netlify/: README.md  netlify.toml
nextjs/: README.md  package-lock.json  package.json  tsconfig.json
nginx/: nginx-php.conf  nginx-proxy.conf  nginx-spa.conf
nuxt/: README.md  package-lock.json  package.json
rails/: README.md  indexboost-rails.gemspec
spring/: README.md
symfony/: README.md
vercel/: vercel.json
(+25 files in other folders)
