[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indexboost-django"
version = "1.0.0"
description = "IndexBoost Render middleware for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["indexboost", "render", "seo", "django", "crawler"]
dependencies = [
    "django>=4.0",
]

[project.urls]
Homepage = "https://getindexboost.com/docs/integrations/django"
Repository = "https://github.com/indexboost/integrations"

[tool.hatch.build.targets.wheel]
packages = ["indexboost_django"]
